--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "vue": "^3.5.13"
     }
 }
